--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
 <app-toolbar></app-toolbar>
+
+<app-alerts></app-alerts>
+
+<app-overview></app-overview>
+
+<app-map *ngIf="map"></app-map>
+<button mat-icon-button aria-label="Forecast" (click)="map=!map" *ngIf="map">
+  <mat-icon>multiline_chart</mat-icon>
+</button>
+
+<app-forecast *ngIf="!map"></app-forecast>
+<button mat-icon-button aria-label="Map" (click)="map=!map" *ngIf="!map">
+  <mat-icon>map</mat-icon>
+</button>
