--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar color="primary">
   <span>{{location}}</span>
   <span class="example-spacer"></span>
+  <button mat-icon-button aria-label="Search">
+    <mat-icon>search</mat-icon>
+  </button>
   <button mat-icon-button aria-label="Settings">
     <mat-icon>settings</mat-icon>
   </button>
