--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,6 +1,5 @@
-<p class="overview-state">{{temperature}}</p>
-<p class="overview-state">{{heatIndex}}</p>
-<p class="overview-state">{{windSpeed}}</p>
-<p class="overview-state">{{airQuality}}</p>
-<p class="overview-state">{{precipitationAmount}}</p>
-<p class="overview-state">{{precipitationType}}</p>
+<p class="overview-state">{{description}}</p>
+<p class="overview-state">Temperature: {{temperature}} {{tempQualifier}}</p>
+<p class="overview-state">Wind: {{windSpeed}}</p>
+<p class="overview-state">Air quality: {{airQuality}}</p>
+<p class="overview-state">Precipitation: {{precipitationAmount}} of {{precipitationType}}</p>
