added AQI call, reformatted display a bit

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,5 +1,4 @@
-<p class="overview-state">{{description}}</p>
+<p class="overview-state">Conditions: {{description}}</p>
 <p class="overview-state">Temperature: {{temperature}} {{tempQualifier}}</p>
 <p class="overview-state">Wind: {{windSpeed}}</p>
 <p class="overview-state">Air quality: {{airQuality}}</p>
-<p class="overview-state">Precipitation: {{precipitationAmount}} of {{precipitationType}}</p>
