--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-toolbar></app-toolbar>
 
-<app-alerts></app-alerts>
+<app-alerts [alerts]="alerts"></app-alerts>
 
 <app-overview [weather]="weather" [aqi]="aqi"></app-overview>
 
