--- a/src/app/alerts/alerts.component.html
+++ b/src/app/alerts/alerts.component.html
@@ -1,1 +1,3 @@
-<p>alerts works!</p>
+<div *ngFor="let a of parsedAlerts">
+  <p>{{a.severity}} alert: {{a.description}}<br />Expires: {{a.expires}}</p>
+</div>
