--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -1,3 +1,9 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.mat-form-field .mat-icon {
+  height: 24px;
+  width: 24px !important;
+  font-size: 125% !important;
+}
